@@ -15,52 +15,37 @@ package org.apache.pekko.util;
 
 import org.apache.pekko.annotation.InternalApi;
 
-import java.lang.reflect.Field;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.VarHandle;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 
 /** INTERNAL API */
 @InternalApi
 public final class Unsafe {
-  public static final sun.misc.Unsafe instance;
-
-  private static final long stringValueFieldOffset;
-  private static final boolean isJavaVersion9Plus;
+  private static final VarHandle stringValueFieldHandle;
   private static final int copyUSAsciiStrToBytesAlgorithm;
 
   static {
     try {
-      sun.misc.Unsafe found = null;
-      for (Field field : sun.misc.Unsafe.class.getDeclaredFields()) {
-        if (field.getType() == sun.misc.Unsafe.class) {
-          field.setAccessible(true);
-          found = (sun.misc.Unsafe) field.get(null);
-          break;
-        }
-      }
-      if (found == null) throw new IllegalStateException("Can't find instance of sun.misc.Unsafe");
-      else instance = found;
-
-      long fo;
+      VarHandle handle;
       try {
-        fo = instance.objectFieldOffset(String.class.getDeclaredField("value"));
-      } catch (NoSuchFieldException nsfe) {
-        // The platform's implementation of String doesn't have a 'value' field, so we have to use
-        // algorithm 0
-        fo = -1;
+        MethodHandles.Lookup lookup =
+            MethodHandles.privateLookupIn(String.class, MethodHandles.lookup());
+        handle = lookup.findVarHandle(String.class, "value", byte[].class);
+      } catch (NoSuchFieldException | IllegalAccessException e) {
+        // The platform's implementation of String doesn't have a 'value' field
+        // or the field is inaccessible, so we have to use algorithm 0.
+        // You need `--add-opens=java.base/java.lang=ALL-UNNAMED` or similar to access it.
+        handle = null;
       }
-      stringValueFieldOffset = fo;
+      stringValueFieldHandle = handle;
 
-      isJavaVersion9Plus = isIsJavaVersion9Plus();
-
-      if (stringValueFieldOffset > -1) {
-        // Select optimization algorithm for `copyUSAciiBytesToStr`.
+      if (handle != null) {
+        // Select optimization algorithm for `copyUSAsciiBytesToStr`.
         // For example algorithm 1 will fail with JDK 11 on ARM32 (Raspberry Pi),
         // and therefore algorithm 0 is selected on that architecture.
         String testStr = "abc";
-        if (isJavaVersion9Plus && testUSAsciiStrToBytesAlgorithm1(testStr))
-          copyUSAsciiStrToBytesAlgorithm = 1;
-        else if (testUSAsciiStrToBytesAlgorithm2(testStr)) copyUSAsciiStrToBytesAlgorithm = 2;
+        if (testUSAsciiStrToBytesAlgorithm1(testStr)) copyUSAsciiStrToBytesAlgorithm = 1;
         else copyUSAsciiStrToBytesAlgorithm = 0;
       } else
         // We know so little about the platform's String implementation that we have
@@ -71,27 +56,16 @@ public final class Unsafe {
     }
   }
 
-  static boolean isIsJavaVersion9Plus() {
-    // See Oracle section 1.5.3 at:
-    // https://docs.oracle.com/javase/8/docs/technotes/guides/versioning/spec/versioning2.html
-    final int[] version =
-        Arrays.stream(System.getProperty("java.specification.version").split("\\."))
-            .mapToInt(Integer::parseInt)
-            .toArray();
-    final int javaVersion = version[0] == 1 ? version[1] : version[0];
-    return javaVersion > 8;
-  }
-
   static boolean testUSAsciiStrToBytesAlgorithm0(String str) {
     try {
       byte[] bytes = new byte[str.length()];
 
-      // copy of implementation in copyUSAciiBytesToStr
+      // copy of implementation in copyUSAsciiBytesToStr
       byte[] strBytes = str.getBytes(StandardCharsets.US_ASCII);
       System.arraycopy(strBytes, 0, bytes, 0, str.length());
       // end copy
 
-      String result = copyUSAciiBytesToStr(str.length(), bytes);
+      String result = copyUSAsciiBytesToStr(str.length(), bytes);
       return str.equals(result);
     } catch (Throwable all) {
       return false;
@@ -102,38 +76,19 @@ public final class Unsafe {
     try {
       byte[] bytes = new byte[str.length()];
 
-      // copy of implementation in copyUSAciiBytesToStr
-      final byte[] chars = (byte[]) instance.getObject(str, stringValueFieldOffset);
+      // copy of implementation in copyUSAsciiBytesToStr
+      final byte[] chars = (byte[]) stringValueFieldHandle.get(str);
       System.arraycopy(chars, 0, bytes, 0, str.length());
       // end copy
 
-      String result = copyUSAciiBytesToStr(str.length(), bytes);
+      String result = copyUSAsciiBytesToStr(str.length(), bytes);
       return str.equals(result);
     } catch (Throwable all) {
       return false;
     }
   }
 
-  static boolean testUSAsciiStrToBytesAlgorithm2(String str) {
-    try {
-      byte[] bytes = new byte[str.length()];
-
-      // copy of implementation in copyUSAciiBytesToStr
-      final char[] chars = (char[]) instance.getObject(str, stringValueFieldOffset);
-      int i = 0;
-      while (i < str.length()) {
-        bytes[i] = (byte) chars[i++];
-      }
-      // end copy
-
-      String result = copyUSAciiBytesToStr(str.length(), bytes);
-      return str.equals(result);
-    } catch (Throwable all) {
-      return false;
-    }
-  }
-
-  private static String copyUSAciiBytesToStr(int length, byte[] bytes) {
+  private static String copyUSAsciiBytesToStr(int length, byte[] bytes) {
     char[] resultChars = new char[length];
     int i = 0;
     while (i < length) {
@@ -146,14 +101,8 @@ public final class Unsafe {
 
   public static void copyUSAsciiStrToBytes(String str, byte[] bytes) {
     if (copyUSAsciiStrToBytesAlgorithm == 1) {
-      final byte[] chars = (byte[]) instance.getObject(str, stringValueFieldOffset);
+      final byte[] chars = (byte[]) stringValueFieldHandle.get(str);
       System.arraycopy(chars, 0, bytes, 0, str.length());
-    } else if (copyUSAsciiStrToBytesAlgorithm == 2) {
-      final char[] chars = (char[]) instance.getObject(str, stringValueFieldOffset);
-      int i = 0;
-      while (i < str.length()) {
-        bytes[i] = (byte) chars[i++];
-      }
     } else {
       byte[] strBytes = str.getBytes(StandardCharsets.US_ASCII);
       System.arraycopy(strBytes, 0, bytes, 0, str.length());
@@ -166,20 +115,7 @@ public final class Unsafe {
     int i = 0;
 
     if (copyUSAsciiStrToBytesAlgorithm == 1) {
-      final byte[] chars = (byte[]) instance.getObject(str, stringValueFieldOffset);
-      while (i < str.length()) {
-        long x = s0 ^ (long) chars[i++]; // Mix character into PRNG state
-        long y = s1;
-
-        // Xorshift128+ round
-        s0 = y;
-        x ^= x << 23;
-        y ^= y >>> 26;
-        x ^= x >>> 17;
-        s1 = x ^ y;
-      }
-    } else if (copyUSAsciiStrToBytesAlgorithm == 2) {
-      final char[] chars = (char[]) instance.getObject(str, stringValueFieldOffset);
+      final byte[] chars = (byte[]) stringValueFieldHandle.get(str);
       while (i < str.length()) {
         long x = s0 ^ (long) chars[i++]; // Mix character into PRNG state
         long y = s1;
