@@ -11,7 +11,6 @@
  * Copyright (C) 2009-2022 Lightbend Inc. <https://www.lightbend.com>
  */
 
-import JdkOptions.autoImport._
 import MultiJvmPlugin.autoImport.MultiJvm
 
 import com.lightbend.paradox.projectinfo.ParadoxProjectInfoPluginKeys._
@@ -110,17 +109,9 @@ object PekkoBuild {
     }
   }
 
-  private def jvmGCLogOptions(isJdk11OrHigher: Boolean, isJdk8: Boolean): Seq[String] = {
-    if (isJdk11OrHigher)
-      // -Xlog:gc* is equivalent to -XX:+PrintGCDetails. See:
-      // https://docs.oracle.com/en/java/javase/11/tools/java.html#GUID-BE93ABDC-999C-4CB5-A88B-1994AAAC74D5
-      Seq("-Xlog:gc*")
-    else if (isJdk8) Seq("-XX:+PrintGCTimeStamps", "-XX:+PrintGCDetails")
-    else Nil
-  }
+  private val jvmGCLogOptions: Seq[String] = Seq("-Xlog:gc*")
 
-  // -XDignore.symbol.file suppresses sun.misc.Unsafe warnings
-  final val DefaultJavacOptions = Seq("-encoding", "UTF-8", "-Xlint:unchecked", "-XDignore.symbol.file")
+  final val DefaultJavacOptions = Seq("-encoding", "UTF-8", "-Xlint:unchecked")
 
   lazy val defaultSettings: Seq[Setting[_]] = Def.settings(
     projectInfoVersion := (if (isSnapshot.value) "snapshot" else version.value),
@@ -129,21 +120,12 @@ object PekkoBuild {
     TestExtras.Filter.settings,
     // compile options
     Compile / scalacOptions ++= DefaultScalacOptions.value,
-    Compile / scalacOptions ++=
-      JdkOptions.targetJdkScalacOptions(
-        targetSystemJdk.value,
-        optionalDir(jdk8home.value),
-        fullJavaHomes.value,
-        scalaVersion.value),
+    Compile / scalacOptions ++= JdkOptions.targetJdkScalacOptions(scalaVersion.value),
     Compile / scalacOptions ++= (if (allWarnings) Seq("-deprecation") else Nil),
     Test / scalacOptions := (Test / scalacOptions).value.filterNot(opt =>
       opt == "-Xlog-reflective-calls" || opt.contains("genjavadoc")),
-    Compile / javacOptions ++= {
-      DefaultJavacOptions ++
-      JdkOptions.targetJdkJavacOptions(targetSystemJdk.value, optionalDir(jdk8home.value), fullJavaHomes.value)
-    },
-    Test / javacOptions ++= DefaultJavacOptions ++
-    JdkOptions.targetJdkJavacOptions(targetSystemJdk.value, optionalDir(jdk8home.value), fullJavaHomes.value),
+    Compile / javacOptions ++= JdkOptions.targetJdkJavacOptions,
+    Test / javacOptions ++= DefaultJavacOptions ++ JdkOptions.targetJdkJavacOptions,
     Compile / javacOptions ++= (if (allWarnings) Seq("-Xlint:deprecation") else Nil),
     doc / javacOptions := Seq(),
     crossVersion := CrossVersion.binary,
@@ -219,7 +201,7 @@ object PekkoBuild {
         "-Djava.security.egd=file:/dev/./urandom")
 
       defaults ++ CliOptions.runningOnCi
-        .ifTrue(jvmGCLogOptions(JdkOptions.isJdk11orHigher, JdkOptions.isJdk8))
+        .ifTrue(jvmGCLogOptions)
         .getOrElse(Nil) ++
       JdkOptions.versionSpecificJavaOptions
     },
@@ -258,7 +240,6 @@ object PekkoBuild {
     Test / testOptions += Tests.Argument("-oDF"),
     mavenLocalResolverSettings,
     docLintingSettings,
-    JdkOptions.targetJdkSettings,
     // a workaround for https://github.com/akka/akka/issues/27661
     // see also project/Protobuf.scala that introduces /../ to make "intellij happy"
     MultiJvm / assembly / fullClasspath := {
@@ -319,10 +300,7 @@ object PekkoBuild {
   lazy val docLintingSettings = Seq(
     compile / javacOptions ++= Seq("-Xdoclint:none"),
     test / javacOptions ++= Seq("-Xdoclint:none"),
-    doc / javacOptions ++= {
-      if (JdkOptions.isJdk8) Seq("-Xdoclint:none")
-      else Seq("-Xdoclint:none", "--ignore-source-errors")
-    })
+    doc / javacOptions ++= Seq("-Xdoclint:none", "--ignore-source-errors"))
 
   def loadSystemProperties(fileName: String): Unit = {
     import scala.collection.JavaConverters._
